Testing api-key manifest injecting